add_executable(test_Bank ${SOURCES} test/test_Bank.cpp)
add_test(test_Bank test_Bank)
add_executable(test_BlackjackDealer ${SOURCES} test/test_BlackjackDealer.cpp)
add_test(test_BlackjackDealer test_BlackjackDealer)
add_executable(test_BlackjackScore ${SOURCES} test/test_BlackjackScore.cpp)
add_test(test_BlackjackScore test_BlackjackScore)
add_executable(test_BlackjackRound ${SOURCES} test/test_BlackjackRound.cpp)
add_test(test_BlackjackRound test_BlackjackRound)
add_executable(test_Card ${SOURCES} test/test_Card.cpp)
add_test(test_Card test_Card)
add_executable(test_Casino ${SOURCES} test/test_Casino.cpp)
add_test(test_Casino test_Casino)
add_executable(test_Chip ${SOURCES} test/test_Chip.cpp)
add_test(test_Chip test_Chip)
add_executable(test_CmdParser ${SOURCES} test/test_CmdParser.cpp)
add_test(test_CmdParser test_CmdParser)
add_executable(test_Deck ${SOURCES} test/test_Deck.cpp)
add_test(test_Deck test_Deck)
add_executable(test_Hand ${SOURCES} test/test_Hand.cpp)
add_test(test_Hand test_Hand)
add_executable(test_KnuthShuffler ${SOURCES} test/test_KnuthShuffler.cpp)
add_test(test_KnuthShuffler test_KnuthShuffler)
add_executable(test_Player ${SOURCES} test/test_Player.cpp)
add_test(test_Player test_Player)
add_executable(test_Pot ${SOURCES} test/test_Pot.cpp)
add_test(test_Pot test_Pot)
add_executable(test_Seat ${SOURCES} test/test_Seat.cpp)
add_test(test_Seat test_Seat)
add_executable(test_Table ${SOURCES} test/test_Table.cpp)
add_test(test_Table test_Table)
add_executable(test_Timer ${SOURCES} test/test_Timer.cpp)
add_test(test_Timer test_Timer)
add_executable(test_Router ${SOURCES} test/test_Router.cpp)
add_test(test_Router test_Router)
